# fluidsynth-android-play-note

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/fluidsynth/include/: fluidsynth.h
app/src/main/java/com/example/fluidsynthandroidhelloworld/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
